# axle

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  Doxyfile  INSTALL.md  LICENSE  LICENSE.md  Makefile  Makefile-test  README.md  amc.md  ap_bootstrap.md  ap_bootstrap.s.x86_64.arch_specific  asmjit.c  boot.s  build-all.py  build-extern.sh  build-initrd-and-run.sh  build-kernel-headers.py  build-libagx.py  build-libs.py  build-newlib.sh  build.sh  build_all.py  build_kernel.py  build_kernel_headers.py  build_newlib.py  build_programs.py  build_quick.py  build_utils.py  clean-duplicate-files-named-2.py  clock.c  clock.h  common.c  common.h  compositor.md  create_hard_drive_image.py  crt0.s  (+64 more)
programs/: cross_axle.ini  cross_axle_template.ini  linker.ld  meson.build
programs/2048/: 2048.c  meson.build
programs/activity_monitor/: activity_monitor.c  meson.build
programs/ata_driver/: ata_driver.c  ata_driver.h  ata_driver_messages.h  meson.build
programs/awm/: animations.c  awm.c  awm_messages.h  composite.c  composite.h  meson.build  utils.c  utils.h  window.c  window.h
programs/breakout/: breakout.c  makefile  meson.build
programs/cat/: meson.build
programs/crash_reporter/: crash_reporter.c  makefile  meson.build
programs/doom/: Makefile  Makefile.freebsd  Makefile.sdl  Makefile.soso  Makefile.sosox  d_iwad.c  d_main.c  doom.c  doomgeneric.vcxproj  doomgeneric.vcxproj.filters  doomgeneric_axle.c  doomgeneric_sdl.c  doomgeneric_soso.c  doomgeneric_sosox.c  doomgeneric_win.c  doomgeneric_xlib.c  i_cdmus.c  meson.build
programs/echo/: echo.c
programs/empty/: meson.build
programs/false/: meson.build
programs/file_manager/: ata.c  ata.h  fat.c  fat.h  file_manager.c  file_manager_messages.h  fs_node.h  initrd.c  initrd.h  meson.build  tests.c  tests.h  ui.c  util.c  util.h  vfs.c  vfs.h
programs/image_viewer/: image_viewer.c  meson.build
programs/kb_driver/: generate_keyboard_map.py  kb_colemak.h  kb_driver.c  meson.build
programs/libagx/: makefile  math.h  meson.build
programs/libagx/lib/: ca_layer.c  ca_layer.h  color.h  point.h  putpixel.c  putpixel.h  text_box.c
programs/libamc/: libamc.c  libamc.h  meson.build
programs/libfiles/: libfiles.c  libfiles.h  meson.build
programs/libgui/: gui_layer.c  gui_scroll_view.c  gui_text_input.c  gui_text_input.h  gui_text_view.c  gui_timer.c  gui_timer.h  libgui.c  libgui.h  meson.build
programs/libimg/: libimg.c  libimg.h  meson.build
programs/libnet/: libnet.c  meson.build
programs/libport/: libport.h  meson.build
programs/libutils/: assert.c  assert.h  meson.build
programs/logs_viewer/: meson.build
programs/mouse_driver/: meson.build
programs/net/: callback.c  callback.h  meson.build  net.h  tcp.c
programs/netclient/: css.c  gfx.h  meson.build  netclient.c  shims.c
programs/paintbrush/: meson.build  paintbrush.c
programs/pci_driver/: meson.build  pci_driver.c  pci_driver.h
programs/preferences/: meson.build  preferences.c
programs/print_and_exit/: meson.build
programs/rainbow/: meson.build
programs/realtek_8139_driver/: meson.build  realtek_8139_driver.c
programs/snake/: meson.build  snake.c
programs/subprojects/2048/: 2048.c  meson.build
programs/subprojects/activity_monitor/: activity_monitor.c  meson.build
programs/subprojects/ata_driver/: ata_driver.c  meson.build
programs/subprojects/awm/: animations.c  animations.h  awm.c  awm_internal.h  awm_messages.h  composite.c  composite.h  effects.c  effects.h  meson.build  utils.c  utils.h  window.c  window.h
programs/subprojects/breakout/: breakout.c  meson.build
programs/subprojects/cat/: meson.build
programs/subprojects/crash_reporter/: meson.build
programs/subprojects/doom/: d_iwad.c  d_main.c  i_main.c  m_config.c  meson.build
programs/subprojects/echo/: meson.build
programs/subprojects/empty/: empty.c
programs/subprojects/false/: false.c
programs/subprojects/file_manager/: ata.h  fat.c  fat.h  file_manager.c  file_manager_messages.h  initrd.c  math.h  meson.build  ui.c  ui.h  util.c  vfs.c  vfs.h
programs/subprojects/image_viewer/: image_viewer.c  image_viewer_messages.h  meson.build
programs/subprojects/kb_driver/: generate_keyboard_map.py  kb_colemak.h  kb_driver.c  kb_driver.h  (+2 more)
programs/terminal/: meson.build  terminal.c  terminal.h
programs/textpad/: meson.build
programs/tlsclient/: asn1.c  meson.build  tls.c  tlsclient.c
programs/true/: meson.build  true.c
programs/watchdogd/: meson.build  watchdogd.c  watchdogd.h  watchdogd_messages.h
rust_kernel_libs/acpi/: Cargo.toml
rust_programs/: Cargo.toml  saved_capture.txt  saved_capture1.txt  x86_64-unknown-axle.json
rust_programs/agx_definitions/: Cargo.toml
rust_programs/awm2/: Cargo.toml  build.rs  requirements.md
rust_programs/awm_messages/: Cargo.toml
rust_programs/axle_rt/: Cargo.toml
rust_programs/axle_rt_derive/: Cargo.toml
rust_programs/c_compiler/: Cargo.toml
rust_programs/compilation_definitions/: Cargo.toml
rust_programs/dock/: Cargo.toml
rust_programs/dock_messages/: Cargo.toml  build.rs
rust_programs/example_program/: Cargo.toml
rust_programs/file_browser/: Cargo.toml
rust_programs/file_manager_messages/: Cargo.toml  build.rs
rust_programs/fs_client/: Cargo.toml
rust_programs/gb_emu/: Cargo.toml
rust_programs/gpt_helper/: Cargo.toml
rust_programs/ide/: Cargo.toml  build.rs
rust_programs/initrd_fs/: Cargo.toml
rust_programs/kb_driver_messages/: Cargo.toml
rust_programs/libfs/: Cargo.toml
rust_programs/libgui/: Cargo.toml
rust_programs/libgui_derive/: Cargo.toml
rust_programs/linker/: Cargo.toml  rustfmt.toml
rust_programs/linker_messages/: Cargo.toml
rust_programs/menu_bar/: Cargo.toml
rust_programs/menu_bar_messages/: Cargo.toml
rust_programs/mouse_driver_messages/: Cargo.toml
rust_programs/preferences_messages/: Cargo.toml
rust_programs/sata_driver/: Cargo.toml
rust_programs/sata_driver_messages/: Cargo.toml  build.rs
rust_programs/ttf_renderer/: Cargo.toml
rust_programs/ttf_viewer/: Cargo.toml
rust_programs/xplatform_gui/: Cargo.toml
(+2224 files in other folders)
