project('all', 'c')
subproject('2048')
subproject('activity_monitor')
subproject('ata_driver')
subproject('awm')
subproject('breakout')
subproject('cat')
subproject('crash_reporter')
subproject('doom')
subproject('echo')
subproject('empty')
subproject('false')
subproject('file_manager')
subproject('image_viewer')
subproject('kb_driver')
subproject('libagx')
subproject('libamc')
subproject('libfiles')
subproject('libgui')
subproject('libimg')
subproject('libnet')
subproject('libport')
subproject('libutils')
subproject('logs_viewer')
subproject('mouse_driver')
subproject('net')
subproject('netclient')
subproject('paintbrush')
subproject('pci_driver')
subproject('preferences')
subproject('print_and_exit')
subproject('rainbow')
subproject('realtek_8139_driver')
subproject('snake')
subproject('terminal')
subproject('textpad')
subproject('true')
subproject('watchdogd')
