[workspace]
resolver = "2"
members = [
    "agx_definitions",
    "awm_messages",
    "axle_rt",
    "axle_rt_derive",
    "file_browser",
    "file_manager_messages",
    "initrd_fs",
    "libfs",
    "libgui",
    "gb_emu",
    "sata_driver",
    "sata_driver_messages",
]

exclude = [
    "gpt_helper",
]