[workspace]
resolver = "2"
members = [
    "agx_definitions",
    "awm_messages",
    "axle_rt",
    "axle_rt_derive",
    "file_browser",
    "file_manager_messages",
    "initrd_fs",
    "libfs",
    "libgui",
    "gb_emu",
    "sata_driver",
    "sata_driver_messages",
    "dock",
    "image_viewer_messages",
    "linker",
    "linker_messages",
    "ide",
]

exclude = [
    "gpt_helper",
    "scroll_view_test",
]