[package]
name = "acpi"
version = "0.1.0"
edition = "2021"

[lib]
name = "acpi"
crate-type = ["staticlib"]

[dependencies]
ffi_bindings = {path = "../ffi_bindings"}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["alloc"]
