[package]
name = "agx_definitions"
version = "0.1.0"
edition = "2021"

[dependencies]
axle_rt = { path = "../axle_rt" }
itertools = { version = "0.10.5", default-features = false }
bresenham = { git = "https://github.com/indubitablement2/bresenham-rs" }

# PT: For f64.sqrt() in no_std contexts
[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

