[package]
name = "awm2"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Ref: https://github.com/rust-lang/cargo/issues/5139
run_with_std = ["libgui/run_with_std", "pixels", "winit", "image"]

[dependencies]
axle_rt = { path = "../axle_rt" }
axle_rt_derive = {path = "../axle_rt_derive" }
agx_definitions = {path = "../agx_definitions" }
awm_messages = {path = "../awm_messages" }
libgui = { path = "../libgui", default-features = false }
mouse_driver_messages = {path = "../mouse_driver_messages" }
kb_driver_messages = {path = "../kb_driver_messages" }
file_manager_messages = {path = "../file_manager_messages" }
# PT: Just for holding a global RNG for random colors, not vital...
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }

# These dependencies are only enabled in use_std mode
pixels = { version = "0.10.0", optional = true }
winit = { version = "*", optional = true }
# PT: For the test suite
image = { version = "0.24.1", optional = true }

# PT: For f64.sqrt() in no_std
[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]
