[package]
name = "c_compiler"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["run_in_axle"]
run_in_axle = []
run_with_std = ["tempfile"]

[dependencies]
axle_rt = {path = "../axle_rt" }
axle_rt_derive = {path = "../axle_rt_derive" }
# TODO(PT): This should enable the default features when we're running in no_std
linker = { path = "../linker", default-features = false }
cstr_core = "0.2.4"
strum = "0.24.1"
strum_macros = "0.24"
derive_more = "0.99.17"
itertools = "0.10.5"
# These dependencies are only enabled in use_std mode
tempfile = { version = "3.3.0", optional = true }
