[package]
name = "file_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
axle_rt = { path = "../axle_rt" }
axle_rt_derive = {path = "../axle_rt_derive" }
agx_definitions = {path = "../agx_definitions" }
libgui = { path = "../libgui" }
file_manager_messages = {path = "../file_manager_messages" }
